--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body{
-    background-image: url("/images/federica-galli-449563-unsplash.jpg");
+    background-image: url("/images/31276156-rap-music-hip-hop-graffiti-seamless-background.jpg");
 }
 
 .bk{
-    opacity: .7;
+    background-image: url('/images/1_rW0xM5axMw-sVjaDWC4wqQ.jpeg');
+    background-size: 1300px 700px;
     background-color: #17880c;
     height: 700px;
 }
@@ -14,7 +15,39 @@ body{
 
 .center {
     margin: auto;
+    margin-top: 50px;
     width: 50%;
     border: 3px solid green;
     padding: 10px;
+}
+
+.startButtonStyle{
+    position: relative;
+    margin: auto;
+    width: 50%;
+    padding: 0;
+    margin-top: 150px;
+    border: none;
+    background-color: transparent;
+}
+
+.startButtonStyle:focus{
+    outline: none;
+}
+
+.imgStyle{
+    height: 200px;
+    animation-name: vinylRotate;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+@keyframes vinylRotate{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
 }
