--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
+html.sr .load-hidden {
+    visibility: hidden;
+}
+
 body{
     background-image: url("/images/31276156-rap-music-hip-hop-graffiti-seamless-background.jpg");
+    font-family: 'Indie Flower', cursive;
+    color: rgb(211, 13, 13);
+    font-size: 24px
 }
 
 .bk{
@@ -17,7 +24,7 @@ body{
     margin: auto;
     margin-top: 50px;
     width: 50%;
-    border: 3px solid green;
+    border: 3px solid rgb(180, 19, 19);
     padding: 10px;
 }
 
